<resources>
    <string name="app_name">MAD_Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">SMARTBUY</string>
    <string name="home_topic_1">Explore Popular Categories</string>
    <string name="slogan">Experience the future..</string>
    <string name="Logo">SMARTBUY</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="devicename">Iphone 14 pro max</string>
    <string name="price">LKR 450000</string>
    <string name="add">ADD</string>
    <string name="quantity">Quantity</string>
    <string name="quntitynumber">1</string>
    <string name="user_name">Name</string>
    <string name="editprofile">Edit</string>
    <string name="fname">Anushka</string>
    <string name="firstname">First Name</string>
    <string name="username">Username</string>
    <string name="lname">Last Name</string>
    <string name="emailadd">Email</string>
    <string name="contact">Contact no</string>
    <string name="address">Address</string>
    <string name="lastname">sharma</string>
    <string name="location">New Kandy rd, Malabe</string>
    <string name="productName">Product Name</string>
    <string name="status">Status</string>
    <string name="product">Product</string>
    <string name="addProduct">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="view_image">View Image</string>
    <string name="get_image">Get Image</string>
    <string name="view_products">View Products</string>
    <string name="AdminProducts">Edit Products</string>
    <string name="item_id">ID</string>
    <string name="item_name">Name</string>
    <string name="price_name">Price</string>
    <string name="action">Edit</string>
    <string name="enter_the_product_name">Enter the Product Name :</string>
    <string name="enter_the_price">Enter the Price :</string>
    <string name="updateProduct">Update Product</string>
    <string name="enter_the_product_status">Enter the Product Status :</string>
    <string name="smartbuy">SMARTBUY</string>
    <string name="phones">Phones</string>
    <string name="laptops">Laptops</string>
    <string name="todo">TODO</string>
    <string name="tv_s">TV\'s</string>
    <string name="featured_deals">Featured Deals</string>
    <string name="view_all_deals">View all deals</string>
    <string name="brandnewstatus">Brand New</string>
    <string name="cart">CART</string>
    <string name="mycart">MY CART</string>
    <string name="view_events_and_offers">View Events and Offers</string>
    <string name="add_event_and_offers">Add Events and Offers</string>
    <string name="add_event_or_offers">Add Events Or Offers</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signup">Sign UP</string>
    <string name="start_date">Start Date</string>
    <string name="description">Description</string>
    <string name="event_and_offers">Events and Offers</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="number_of_products">Number of Products</string>
    <string name="count">count</string>
</resources>