<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#E63CB0FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="44dp"
            android:elegantTextHeight="true"
            android:letterSpacing="0.1"
            android:text="@string/appName"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/updateProduct"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="40dp"
            android:text="@string/enter_the_product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/et_prNameUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/product_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter_the_price"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_prNameUp" />

        <EditText
            android:id="@+id/et_prPriceUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:hint="@string/price"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter_the_product_status"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_prPriceUp" />

        <EditText
            android:id="@+id/et_prStatusUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_get_imageUp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:text="@string/get_image"
            android:backgroundTint="#8F8F8F"
            app:layout_constraintBottom_toBottomOf="@+id/img_pr_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toEndOf="@+id/img_pr_update"
            app:layout_constraintTop_toTopOf="@+id/img_pr_update" />

        <ImageView
            android:id="@+id/img_pr_update"
            android:layout_width="207dp"
            android:layout_height="206dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_prStatusUp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_updateProduct"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:text="@string/updateProduct"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_pr_update" />

        <Button
            android:id="@+id/btn_delete_product"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:backgroundTint="#C33A3A"
            android:layout_marginHorizontal="25dp"
            app:icon="@drawable/ic_baseline_delete_24"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_updateProduct"
            app:layout_constraintEnd_toStartOf="@+id/btn_updateProduct"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>